Edits for part two

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -286,9 +286,9 @@ Whereas regular variational inference regularizes towards a parameter prior, FSV
 In function-space variational inference, we regularize towards a data prior:
 
 $$
-\begin{align*}
+\begin{aligned}
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}},
-\end{align*}
+\end{aligned}
 $$
 unlike in regular variational inference, where we regularize towards a parameter prior: $$\Kale{\qof{\W}}{\pof{\W}}$$.
 </aside>
@@ -311,20 +311,20 @@ The entropy measures the average amount of information needed to describe the ra
 The **mutual information** $$\MIof{X;Y}$$ between two random variables $$X$$ and $$Y$$ is a measure of the amount of information that one random variable contains about the other. It is defined as:
 
 $$
-\begin{align*}
+\begin{aligned}
 \MIof{X;Y} & \triangleq \Hof{X} - \Hof{X \given Y} \\
 &= \Hof{Y} - \Hof{Y \given X} \\
 &= \Hof{X} + \Hof{Y} - \Hof{X, Y}.
-\end{align*}
+\end{aligned}
 $$
 
 We will also use the **Kullback-Leibler divergence** $$\Kale{\pof{X}}{\qof{X}}$$ and the **cross-entropy** $$\CrossEntropy{\pof{X}}{\qof{X}}$$:
 
 $$
-\begin{align*}
+\begin{aligned}
 \CrossEntropy{\pof{X}}{\qof{X}} & = \E{\pof{x}}{-\log \qof{x}}\\
 \Kale{\pof{X}}{\qof{X}} & = \CrossEntropy{\pof{X}}{\qof{X}} - \Hof{X}
-\end{align*}
+\end{aligned}
 $$
 
 The cross-entropy quantifies the average number of bits needed to encode samples drawn from the true distribution $$\pof{X}$$ using a different distribution $$\qof{X}$$. The Kullback-Leibler divergence is a measure of the difference between two probability distributions and captures the additional bits needed to encode samples from $$\pof{X}$$ compared to encoding them using the true distribution $$\qof{X}$$.
@@ -488,19 +488,19 @@ The priors $$\pof{\w}$$ and $$\qof{\w}$$ may have large divergence, representing
 This is because $$\pof{\w}$$ and $$\qof{\w}$$ are not evolving under the same stochastic mapping. Rather, each prior is mapped to its respective posterior via Bayes' rule, which operates differently on $$\opp$$ and $$\opq$$:
 
 $$
-\begin{align*}
+\begin{aligned}
 \pof{\w \given x} &= \frac{\pof{x \given \w}}{\pof{x}} \, \pof{\w}\\
 \qof{\w \given x} &= \frac{\qof{x \given \w}}{\qof{x}} \, \qof{\w}.
-\end{align*}
+\end{aligned}
 $$
 
 Even assuming that both agents have the same internal model, that is they use the same likelihood $$\pof{x \given \w} = \qof{x \given \w}$$, the priors $$\pof{\w}$$ and $$\qof{\w}$$ will still influence the posterior distributions differently because they lead to different evidence terms $$\pof{x}$$ and $$\qof{x}$$:
 
 $$
-\begin{align*}
+\begin{aligned}
 \pof{x} &= \E{\pof{\w}}{\pof{x \given \w}}\\
 \qof{x} &= \E{\qof{\w}}{\qof{x \given \w}}.
-\end{align*}
+\end{aligned}
 $$
 
 Thus, the correct intuition is that observing the same data $$x$$ does not necessarily bring the posterior beliefs closer together---they depend on the interplay between their specific priors and likelihoods. The data processing inequality does not directly apply to this Bayesian updating scenario:
@@ -793,78 +793,89 @@ This exploration sets the stage for diving into function-space variational infer
 
 ### Problem Setting & Notation
 
-In the following, I assume a classification task with cross-entropy loss. This post uses the following notation:
+In the following, we will consider a classification task with cross-entropy loss, and we will use the following the random variables and distributions:
 
 - $$\y$$ is the label,
 - $$\x$$ is the input,
 - $$\qof{\y \given \x}$$ is the predictive distribution we want to learn,
-- $$\pdata{\y \given \x}$$ is the data distribution, and
+- $$\pdata{\y \given \x}$$ is the data distribution, 
+- $$\Dany$$ is the (training) dataset, and
 - $$C$$ is the number of classes.
 
-The probabilistic model is as usual:
+The probabilistic model is:
 
 $$\pof{\y, \w \given \x} = \pof{\y \given \x, \w} \, \pof{\w}.$$
 
-Note that I drop conditioning on $$\x$$ for simplicity, and also note, that I use upper-case letters for random variables, I'm taking an expectation over in some form, e.g.\ the 🥬 divergence, and lower-case letters when I'm referring to specific observations or values that could be substituted (with the exception of $$\Dany$$).
+As before, I use upper-case letters for random variables, which we take an expectation over, e.g. in the KL divergence, and lower-case letters when I'm referring to specific observations or values that could be substituted (with the exception of $$\Dany$$).
 
 
 ### Chain Rule of the 🥬 Divergence & DPI
 
-An important property of the 🥬 divergence is the chain rule:
+An important property of the KL divergence is the chain rule:
 
 $$
-\Kale{\qof{\Y_n,...,\Y_1}}{\pof{\Y_n,...,\Y_1}} = \sum_{i=1}^n \Kale{\qof{\Y_i \given 
+\begin{aligned}
+&\Kale{\qof{\Y_n,...,\Y_1}}{\pof{\Y_n,...,\Y_1}} \\
+&\quad = \sum_{i=1}^n \Kale{\qof{\Y_i \given 
 \Y_{i-1}, ..., \Y_1}}{\pof{\Y_i \given \Y_{i-1}, ..., \Y_1}}.
+\end{aligned}
 $$
 
-Above application of the chain rule yields a *chain inequality* for the DPI as well:
+The chain rule yields a *chain inequality* for the DPI as well:
 
 $$
-\begin{align}
+\begin{aligned}
 \Kale{\qof{\W}}{\pof{\W}} &\ge \Kale{\qof{\Y_n,...,\Y_1}}{\pof{\Y_n,...,\Y_1}}\\
 &\ge \Kale{\qof{\Y_{n-1},...,\Y_1}}{\pof{\Y_{n-1},...,\Y_1}}\\
-&\ge \Kale{\qof{\Y_1}}{\pof{\Y_1}}.
-\end{align}
+&\ge \Kale{\qof{\Y_1}}{\pof{\Y_1}},
+\end{aligned}
 $$
+
+where we start from the KL DPI and then apply the chain rule.
 
 ### Deriving the Functional ELBO
 
 The DPI has an intriguing connection to FSVI. Let's say we want to approximate a Bayesian posterior $$\pof{\w \given \Dany}$$ with a variational distribution $$\qof{\w}$$. In standard VI, we would minimize $$\Kale{\qof{\W}}{\pof{\W \given \Dany}}$$ to match the variational distribution to the Bayesian posterior. Specifically:
 
 $$
-\begin{align}
-\Kale{\qof{\W}}{\pof{\W \given \Dany}} &= \underbrace{\E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\W}}{\pof{\W}}}_{\text{Evidence}\ \text{Bound}} + \log \pof{\Dany} \ge 0 \\
-\iff \underbrace{-\log \pof{\Dany}}_{=\xHof{\pof{\Dany}}} &\le \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\W}}{\pof{\W}}.
-\end{align}
+\begin{aligned}
+&\Kale{\qof{\W}}{\pof{\W \given \Dany}} =\\
+&\quad = \underbrace{\E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\W}}{\pof{\W}}}_{\text{Evidence}\ \text{Bound}} + \log \pof{\Dany} \ge 0 \\
+&\iff \underbrace{-\log \pof{\Dany}}_{=\xHof{\pof{\Dany}}} \le \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\W}}{\pof{\W}}.
+\end{aligned}
 $$
 
-This derives an information-theoretic evidence upper bound on the information content $$-\log \pof{\Dany}$$ of the data $$\Dany$$ under the variational distribution $$\qof{\w}$$.
-In other more probability-theory inspired literature, the negative of this bound is called the *evidence lower bound (ELBO)*, which we maximize.
+This is an information-theoretic evidence (upper) bound on the information content $$-\log \pof{\Dany}$$ of the data $$\Dany$$ under the variational distribution $$\qof{\w}$$, which we can minimize as an objective to approximiate $$\pof{\w \given \Dany}$$ via $$\qof{\w}$$.
 
-In FSVI (with a caveat I detail below), we apply the DPI to the prior 🥬 divergence term and obtain a functional version of the evidence bound:
+In more probability-theory inspired literature, the negative of this bound is called the *evidence lower bound (ELBO)* and is maximized.
+
+Both the ELBO and the information-theoretic evidence upper-bound are equivalent, and we can use either objective, but the information-theoretic perspective is obviously superior 🙃 I'll refer to this as evidence bound from now on.
+
+In FSVI (with a caveat I detail below), we apply the DPI to the prior KL divergence term and obtain a "functional" version of the evidence bound:
 
 $$
-\begin{align}
+\begin{aligned}
 \Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}},
-\end{align}
+\end{aligned}
 $$
 
 where $$\Y... \given \x...$$ are (finite or infinite) sets of samples. That is, we do not only optimize marginal distributions but also joint distributions.
 
 <aside class="l-body box-note" markdown="1">
-For more on the specific differences between marginal and joint objectives, the workshop paper by Kirsch et al (2022)<d-cite key="kirsch2022marginal"></d-cite> provides conceptual thoughts in the same light, which builds on the following important works:
+For more on the specific differences between marginal and joint objectives, the workshop paper by Kirsch et al (2022)<d-cite key="kirsch2022marginal"></d-cite> provides conceptual thoughts on the differences between marginal and joint distributions. It builds on the following important papers:
 
 * "The neural testbed: evaluating joint predictions" by Osband et al, 2022<d-cite key="osband2022neural"></d-cite>
 * "Evaluating high-order predictive distributions in deep learning" by Osband et al, 2022<d-cite key="osband2022evaluating"></d-cite>
 * "Beyond marginal uncertainty: how accurately can Bayesian regression models estimate posterior predictive correlations?" by Wang et al, 2021 <d-cite key="wang2021beyond"></d-cite>
 </aside>
 
-The resulting objective
+
+The resulting objective:
 
 $$
-\begin{align}
+\begin{aligned}
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}
-\end{align}
+\end{aligned}
 $$
 
 is equal to the (negative) *functional ELBO (fELBO)* in "*Functional variational Bayesian neural networks*" by Sun et al. (2019)<d-cite key="sun2019functional"></d-cite>---with caveats that we discuss below.
@@ -877,22 +888,25 @@ Ideally, we want to choose them such that the DPI inequality is as tight as poss
 
 Given the chain inequality, it is obvious that the larger the set $$\x...$$, the tighter the inequality will be. 
 Hence, if we could choose an infinite set of points well, we might be able to get the tightest possible inequality. 
-However, this might not be tractable and in practice, it is often not.
+However, this might not be tractable, and in practice, it is often not.
 
 Some works take a supremum over finite subsets of a certain size, essentially building a core-set as an approximation (Rudner et al., 2022a<d-cite key="rudner2022tractable"></d-cite>/b<d-cite key="rudner2022continual"></d-cite>); 
-others take an expectation over the finite sets of input samples (Sun et al., 2019)<d-cite key="sun2019functional"></d-cite>, which is not necessarily yielding the tightest inequality but provides an unbiased estimate; while again other works focus on finite datasets for which the all points can be taken into account (Klarner et al., 2023<d-cite key="klarner2023drug"></d-cite>).
+others take an expectation over finite sets of input samples (Sun et al., 2019)<d-cite key="sun2019functional"></d-cite>, which is not necessarily yielding the tightest inequality but provides an unbiased estimate; while again other works focus on finite datasets for which the all points can be taken into account (Klarner et al., 2023)<d-cite key="klarner2023drug"></d-cite>.
 
 We will discuss the tightness of the inequality and the implications in the data limit below.
 
 Focusing on the most important aspect of FSVI, we observe:
 
 <aside class="l-body box-important" markdown="1">
-Instead of a parameter prior (term) $$\Kale{\qof{\W}}{\pof{\W}}$$, we have a functional or *predictive* prior (term) $$\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$.
+Instead of a parameter prior (term) $$\Kale{\qof{\W}}{\pof{\W}}$$, we have a functional or *predictive* prior (term):
+
+$$\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}.$$
+
 </aside>
 
 ### Application to Continual Learning 
 
-When we directly optimize the 🥬 divergence on the finite input dataset, for example, we align $$\opq$$ with the prior of $$\opp$$ where it matters most: on the predictions of the observed data.
+When we directly optimize the KL divergence on a finite input dataset, for example, we align $$\opq$$ with the prior of $$\opp$$ where it matters most: on the predictions of the observed data.
 
 This is of particular interest in continual learning, where the prior for the next task is chosen to be the posterior from the previous task. In this case, the functional ELBO can be used to approximate the posterior of the previous model while incorporating new data.
 
@@ -901,27 +915,27 @@ For two great papers that are very readable and provide further insights, see "*
 ## Comparison to FSVI in the Literature
 
 <aside class="l-body box-error" markdown="1">
-An important detail is that in above FSVI papers, the DPI is applied to the *logits* not the *probabilities*. That is we have a distribution over logits, which adds an extra layer of uncertainty. Unlike the class probabilities, which we can also obtain from a deterministic neural network, thanks to the semantic interpretation of the outputs as distribution $$\pof{\y \given \x, \w}$$, a deterministic neural network only provides us with deterministic logits and not a distribution over them. Only a (more) Bayesian approach can provide this.
+An important detail is that in above FSVI papers, the DPI is applied to the *logits* not the *probabilities*. That is, we have a distribution over logits, which adds an extra layer of uncertainty. Unlike the class probabilities, which we can also obtain from a deterministic neural network, thanks to the semantic interpretation of the outputs as distribution $$\pof{\y \given \x, \w}$$, a deterministic neural network only provides us with deterministic logits and not a distribution over them. Only a (more) Bayesian approach can provide this.
 
-In general, we have the following inequality chain that relates the 🥬 divergence between the logits $$\L$$, which is a vector unlike $$\Y$$, and the 🥬 divergence between the output probabilities for $$\Y$$ to the 🥬 divergence between the parameters $$\W$$:
+In general, we have the following inequality chain that relates the KL divergence between the logits $$\L$$, which is a vector unlike $$\Y$$, and the KL divergence between the output probabilities for $$\Y$$ to the KL divergence between the parameters $$\W$$:
 
 $$
-\begin{align}
+\begin{aligned}
 \Kale{\qof{\W}}{\pof{\W}} &\ge \Kale{\qof{\L...\given \x...}}{\pof{\L...\given \x...}} \\
 &\ge \Kale{\qof{\Y...\given \x...}}{\pof{\Y...\given \x...}}.
-\end{align}
+\end{aligned}
 $$
 
+This follows that from applying the DPI twice, as the logits are functions of the weights and the weights are functions of the logits.
 </aside>
 
-
-In practice, both works by Rudner et al.\ (2022), for example, linearize the logits<d-footnote>The final activations of the neural network before applying the softmax function (in multi-class classification), for example. Not to be confused with the pre-logits (e.g. embeddings).</d-footnote> (similar to a Laplace approximation) and use the DPI to shown (in their notation):
+In practice, both works by Rudner et al. (2022), linearize the logits<d-footnote>The logits are the final activations of the neural network before applying the softmax function (in multi-class classification). They are not to be confused with the pre-logits, e.g. embeddings before the final linear layer.</d-footnote> (similar to a Laplace approximation) and use the DPI to show (in their notation):
 
 $$
 \mathbb{D}_{\mathrm{KL}}\left(q_{f(\cdot ; \boldsymbol{\Theta})} \| p_{f(\cdot ; \boldsymbol{\Theta})}\right) \leq \mathbb{D}_{\mathrm{KL}}\left(q_{\Theta} \| p_{\Theta}\right)
 $$
 
-which in my notation is equivalent to the above:
+which in my notation is equivalent to the first application of the DPI above:
 
 $$
 \Kale{\qof{\L...\given \x...}}{\pof{\L...\given \x...}} \le \Kale{\qof{\W}}{\pof{\W}}.
@@ -930,7 +944,10 @@ $$
 They maximize the fELBO objective:
 
 $$
-\mathcal{F}\left(q_{\boldsymbol{\Theta}}\right)=\mathbb{E}_{q_{f\left(\mathbf{x}_{\mathcal{D}} ; \boldsymbol{\Theta}\right)}}\left[\log p_{\mathbf{y} \mid f(\mathbf{X} ; \boldsymbol{\Theta})}\left(\mathbf{y}_{\mathcal{D}} \mid f\left(\mathbf{X}_{\mathcal{D}} ; \boldsymbol{\theta}\right)\right)\right]-\sup _{\mathbf{X} \in \mathcal{X}_{\mathbb{N}}} \mathbb{D}_{\mathrm{KL}}\left(q_{f(\mathbf{X} ; \boldsymbol{\Theta})} \| p_{f(\mathbf{X} ; \boldsymbol{\Theta})}\right),
+\begin{aligned}
+\mathcal{F}\left(q_{\boldsymbol{\Theta}}\right) &=\mathbb{E}_{q_{f\left(\mathbf{x}_{\mathcal{D}} ; \boldsymbol{\Theta}\right)}}\left[\log p_{\mathbf{y} \mid f(\mathbf{X} ; \boldsymbol{\Theta})}\left(\mathbf{y}_{\mathcal{D}} \mid f\left(\mathbf{X}_{\mathcal{D}} ; \boldsymbol{\theta}\right)\right)\right]\\
+&\quad -\sup _{\mathbf{X} \in \mathcal{X}_{\mathbb{N}}} \mathbb{D}_{\mathrm{KL}}\left(q_{f(\mathbf{X} ; \boldsymbol{\Theta})} \| p_{f(\mathbf{X} ; \boldsymbol{\Theta})}\right),
+\end{aligned}
 $$
 
 which is equivalent to minimizing the information-theoretic objective:
@@ -938,7 +955,8 @@ which is equivalent to minimizing the information-theoretic objective:
 $$
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\L... \given \x...}}{\pof{\L... \given \x...}},
 $$
-if we choose the $$\x...$$ to tighten the DPI inequality as much as possible (i.e.\ choosing the supremum).
+
+if we choose the $$\x...$$ to tighten the DPI inequality as much as possible (i.e. by "finding" the supremum).
 
 Using the inequality chain from above, we can sandwich their objective between a regular (negative) ELBO and the (negative) functional ELBO, we have derived above:
 
@@ -950,31 +968,47 @@ $$
 \end{aligned}
 $$
 
-In practice, using the probabilities instead of logits when performing linearization is often cumbersome due to the non-linearity of the softmax functions, which requires Monte-Carlo sampling of the logits to obtain an approximation of the final probabilities. I speculate that sampling the logits can be more benign given that we often use ReLUs in the underlying neural networks. (Don't quote me too strongly on this, though.)
+**Why are they using logits instead of probabilities?** In practice, using the probabilities instead of logits when performing linearization is often cumbersome due to the non-linearity of the softmax functions, which requires Monte-Carlo sampling of the logits to obtain an approximation of the final probabilities. Furthermore, I speculate that sampling the logits can be more benign given that we often use ReLUs in the underlying neural networks. (Don't quote me too strongly on this, though.)
 
-Conceptually, this explains the derivation of their ELBO objective and also relates them to the 'purer' and simpler functional evidence bound derived above, but this raises the question of how these different inequalities are different and what the gap between them tells us. We will address this question in the next section.
+Conceptually, this explains the derivation of their ELBO objective and also relates them to the 'purer' and simpler functional evidence bound derived above, but this raises the question of how these inequalities are different and what the gap between them tells us. Let's address this question next.
 
 ## The Equality Case and Equivalence Classes
 
-When do we have $$\Kale{\qof{\W}}{\pof{\W}} = \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$? And what does it tell us?
-As we have seen in the first part, we have equality in the DPI if and only $$\Kale{\qof{\W \given \Y..., \x...}}{\pof{\W \given \Y..., \x...}}=0$$.
+When do we have equality? That is, when do we have:
+
+$$\Kale{\qof{\W}}{\pof{\W}} = \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}?$$
+
+And what does it tell us?
+
+As we have seen in the first part of this post, we have equality in the DPI if and only: 
+
+$$\Kale{\qof{\W \given \Y..., \x...}}{\pof{\W \given \Y..., \x...}}=0$$.
 
 Given that we are trying to approximate the Bayesian posterior $$\pof{\w \given \Y..., \x...}$$ using $$\qof{\w}$$, this equality condition tells us that we would have to find the exact posterior for equality. 
-Hence, it is unlikely that we will have equality in practice. Thus, this raises the question of what this predictive prior term $$\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$ provides us with.
+Hence, it is unlikely that we will have equality in practice. From this, the next question immediately follows: what does this predictive prior term 
 
-Another way to think about the gap between the two 🥬 divergences is that one is parameter-based and the other one is not:
-Deep neural networks have many parameter symmetries, and it is often possible to permute the weights of a neural network without changing the outputs---for example, in a convolutional neural network, we could swap channels.
- 
-The functional 🥬 divergences won't be affected by this as they are parameter-free and do not take into account the parameters of the model but only the predictions. 
-The regular parameter-based 🥬 divergence, however, would be affected by this---depending on the prior $$\pof{\w}$$.
+$$\Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}}$$ 
 
-If the prior assigns different probability to otherwise equivalent parameters, this obviously changes the parameter posterior, while the outputs are invariant to these changes if the overall assigned probability remains the same.
+provides us with?
+
+Another way to think about the gap between the two KL divergences is that one is parameter-based and the other one is not. This points to a deeper truth about overparameterized models used in deep learning:
 
 <aside class="l-body box-important" markdown="1">
-A better name for the functional 🥬 divergence and function-space variational inference might be *predictive* 🥬 divergence and *predictive variational inference*. 
-
-To me, functions are an abstract thing, and determining how to assign a prior or even a distribution to them sounds difficult and complex, adding an air of mystique for me, whereas predictions are something we can easily understand and relate to.
+Deep neural networks have many parameter symmetries, and it is often possible to permute the weights of a neural network without changing the outputs---for example, in a convolutional neural network, we could swap channels.
 </aside>
+ 
+The functional KL divergences won't be affected by this as they are parameter-free and do not take into account the parameters of the model but only the predictions. 
+The regular parameter-based KL divergence, however, would be affected by this---depending on the prior $$\pof{\w}$$, they might express differences between the parameter distributions that have no effect on the outputs.
+
+In other words, if the prior assigns different probability to otherwise equivalent parameters, this obviously changes the parameter posterior, while the outputs are invariant to these changes if the overall assigned probability to a given output remains the same.
+
+<aside class="l-body box-important" markdown="1">
+A better name for the functional KL divergence and function-space variational inference might be *predictive* KL divergence and *predictive variational inference*. 
+
+To me, functions are an abstract thing, and determining how to assign a prior or even a distribution to them sounds difficult and complex, adding an air of mystique for me, whereas predictions are something I can easily understand and relate to.
+</aside>
+
+For example, the paper "Deep Ensembles: A Loss Landscape Perspective" by Fort et al. (2020)<d-cite key="fort2020deep"></d-cite> examines the similarity of the predictions of models trained from different initializations and shows that the prediction space has a multi-modal loss landspace. In the language of FSVI, this is similar to analyzing the function-space distances between different models.
 
 ### Equivalence Classes
 
@@ -984,7 +1018,7 @@ This equivalence relation partitions the parameter space into equivalence classe
 
 $$[\w] \triangleq \{\w' : \fof{x ; \w} = \fof{x ; \w} \quad \forall x \}.$$
 
-Any prior $$\pof{\w}$$ induces a prior $$\hpof{[\w]}$$ over the equivalence classes:
+A prior $$\pof{\w}$$ induces a prior $$\hpof{[\w]}$$ over the equivalence classes:
 
 $$\hpof{[\w]} \triangleq \sum_{\w' \in [\w]} \pof{\w'}.$$
 
@@ -992,15 +1026,15 @@ $$\hpof{[\w]} \triangleq \sum_{\w' \in [\w]} \pof{\w'}.$$
 
 $$
 \begin{aligned}
-\hpof{\y, [\w] \given \x} &\triangleq \hpof{\y \given [\w], \x} \, \hpof{[\w]} \\
+\hpof{\y, [\w] \given \x} &\triangleq \hpof{\y \given \x,  [\w]} \, \hpof{[\w]} \\
 &= \pof{\y \given \x, \w} \, \hpof{[\w]}.
 \end{aligned}
 $$
 
 <aside class="l-body box-error" markdown="1">
-Crucially, all of this depends on which $$\x$$ we consider as input domain. Different domains for $$\x$$ will induce different equivalence classes. 
+Crucially, the definition of the equivalence classes depends on which $$\x$$ we consider as part of the input domain: *different domains for $$\x$$ will induce different equivalence classes.* 
 
-For example, for function families on $$\mathbb{R} \to \mathbb{R}$$, if we restrict the domain to $$\x \in (0, 1)$$, the equivalence classes will be different from the domain $$\x \in \mathbb{R}$$. For $$\x \in (0, 1)$$, we do not differentiate between functions that behave differently outside this domain. For any $$k \ge 1$$,
+For example, for function families on $$\mathbb{R} \to \mathbb{R}$$, if we restrict the domain to $$\x \in (0, 1)$$, the equivalence classes will be different from the domain $$\x \in \mathbb{R}$$. For $$\x \in (0, 1)$$, we do not differentiate between functions that behave differently outside this domain. For example, for any $$k \ge 1,$$
 
 $$
 \fof{x} = \begin{cases} 
@@ -1015,7 +1049,7 @@ has the same predictions within the domain $$\x \in (0, 1)$$ while being differe
 
 ### Consistency
 
-Importantly, this definition is consistent with Bayesian inference:
+Importantly, the definition of the equivalence classes above is consistent with Bayesian inference:
 
 <aside class="l-body box-note" markdown="1">$$[\w]$$ commutes with Bayesian inference:
 
@@ -1025,7 +1059,7 @@ $$
 
 </aside>
 
-This is easy to show with the definition and application of Bayes' rule:
+This is easy to show with using Bayes' rule:
 
 $$
 \begin{aligned}
@@ -1048,7 +1082,9 @@ $$
 \end{aligned}
 $$
 
-This also tells us that, for any $$\x$$ and $$\y$$, $$\pof{\y... \given \x...} = \hpof{\y... \given \x...}$$.
+This also tells us that, for any $$\x$$ and $$\y$$:
+
+$$\pof{\y... \given \x...} = \hpof{\y... \given \x...}$$.
 
 Given this consistency, we don't have to differentiate between $$\hat\opp$$ and $$\opp$$ and can use $$\opp$$ interchangeably.
 The same holds for $$\opq$$.
@@ -1056,7 +1092,7 @@ The same holds for $$\opq$$.
 <aside class="l-body box-important" markdown="1">
 This is not a special property of the equivalence class mapping but a general property of applying functions to random variables: $$[\cdot]$$ maps the random variable $$\W$$ to the transformed random variable $$[\W]$$, and this mapping commutes with Bayesian inference.
 
-Above proof is valid for any function $$\fof{\cdot}$$ applied to a random variable.
+Above proof is valid for any function $$\fof{\cdot}$$ applied to a random variable: we can either draw a parameter sample from the posterior and apply the function to it or perform Bayesian inference on the transformed random variable.
 </aside>
 
 ### Equality & Symmetries
@@ -1067,46 +1103,46 @@ $$
 \Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{[\W]}}{\pof{[\W]}}.
 $$
 
-What does the gap between the two terms tell us? 
+And again: what does the gap between the two terms tell us? 
 
 <aside class="l-body box-error" markdown="1">
-Intuitively speaking, $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ captures the meaningful divergence between approximate and true posterior, while $$\Kale{\qof{\W}}{\pof{\W}}$$ includes any divergence due to parameter symmetries that has no effect on the predictions, now or later.
+Intuitively speaking, $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ captures the meaningful divergence between approximate and true distribution, while $$\Kale{\qof{\W}}{\pof{\W}}$$ includes any divergence due to parameter symmetries that has no effect on the predictions, now or later. The gap between the two terms tells us how much redundancy is captured by the parameter-based KL divergence.
 </aside>
 
 Let's look at a few examples to get a better understanding of this.
 
-1. Trivial Constant Case
+#### 1. Trivial Constant Case
 
-Let $$\fof{\x ; \w} = 0$$ independent of any $$f$$. Then $$[\w] = [\w']$$ for any $$\w$$, $$\w'$$.
+  Let $$\fof{\x ; \w} = 0$$ independent of any $$f$$. Then $$[\w] = [\w']$$ for any $$\w$$, $$\w'$$.
 
-For any approximate distribution $$\qof{\w}$$, the induced $$\Kale{\qof{[\W]}}{\pof{[\W]}}=0$$, while $$\Kale{\qof{\W}}{\pof{\W}}$$ also includes superfluous divergence.
+  For any approximate distribution $$\qof{\w}$$, the induced $$\Kale{\qof{[\W]}}{\pof{[\W]}}=0$$, while $$\Kale{\qof{\W}}{\pof{\W}}$$ also includes superfluous divergence.
 
-2. Unused Parameter
+#### 2. Unused Parameter
 
-Let $$\y \given (\w_1, \w_2) = \w_1$$ deterministic but independent of $$\w_2$$. Then $$[(\w_1, \w_2)] = [(\w_1, {\w'}_2)]$$ for any $${\w'}_2$$ and $$[(\w_1,*)]\not=[({\w'}_1, *)]$$ for any $$\w_1 \not= \w'_1$$.
+  Let $$\y \given (\w_1, \w_2) = \w_1$$ deterministic but independent of $$\w_2$$. Then $$[(\w_1, \w_2)] = [(\w_1, {\w'}_2)]$$ for any $${\w'}_2$$ and $$[(\w_1,*)]\not=[({\w'}_1, *)]$$ for any $$\w_1 \not= \w'_1$$.
 
-Then $$\Kale{\qof{[\W]}}{\pof{[\W]}}=\Kale{\qof{\W_1}}{\pof{\W_1}}$$ and captures purely the meaningful divergence between approximate and true posterior, while $$\Kale{\qof{\W}}{\pof{\W}}$$ includes any divergence due to parameter symmetries across all $$\w_2$$ that has no effect on the predictions.
+  $$\Kale{\qof{[\W]}}{\pof{[\W]}}=\Kale{\qof{\W_1}}{\pof{\W_1}}$$ captures the meaningful divergence between approximate and true distribution, while $$\Kale{\qof{\W}}{\pof{\W}}$$ also includes any divergence across $$\w_2$$ that has no effect on the predictions.
 
-3. Periodic Parameter Space
+#### 3. Periodic Parameter Space
 
-Finally, let's assume that the predictions are periodic in some way. That is, e.g.\ $$\y = \sin \w$$. Obviously, $$[\w] = [\w + 2\pi]$$ then. 
+  Finally, let's assume that the predictions are periodic in some way. That is, for example $$\y = \sin \w$$. We then have $$[\w] = [\w + 2\pi]$$. 
 
-Further, let $$\pof{\w} = \operatorname{U}(\w; [0,2\pi \, N))$$ for some $$N$$ that determines the number of periods. Then, if we introduce another random variable $$K$$, that captures which period we are in, we can (again) use the chain rule to write:
+  Further, let $$\pof{\w} = \operatorname{U}(\w; [0,2\pi \, N))$$ for some $$N$$ that determines the number of periods. Then, if we introduce another random variable $$K$$, that captures which period we are in, we can (again) use the chain rule to write:
 
-$$
-\begin{aligned}
-\Kale{\qof{\W}}{\pof{\W}} &= \Kale{\qof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}} \\
-&\quad + \Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}} \\
-&= \Kale{\qof{[\W]}}{\pof{[\W]}} \\
-&\quad + \Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}}. 
-\end{aligned}
-$$
+  $$
+  \begin{aligned}
+  \Kale{\qof{\W}}{\pof{\W}} &= \Kale{\qof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \given \W \in [K\,2\pi, (K+1)\,2\pi]}} \\
+  &\quad + \Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}} \\
+  &= \Kale{\qof{[\W]}}{\pof{[\W]}} \\
+  &\quad + \Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}}. 
+  \end{aligned}
+  $$
 
-This follows from the setup of this specific example.
+  This follows from the setup of this specific example. Finally, we have:
+  
+  $$\Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}} \le \log N.$$
 
-Finally, $$\Kale{\qof{\W \in [K\,2\pi, (K+1)\,2\pi]}}{\pof{\W \in [K\,2\pi, (K+1)\,2\pi]}} \le \log N$$.
-
-So, if $$\opq$$ only had support in a single period for example, the difference between $$\Kale{\qof{\W}}{\pof{\W}}$$ and $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ would be $$\log N$$, capturing the redundancy.
+  So, if $$\opq$$ only had support in a single period for example, the difference between $$\Kale{\qof{\W}}{\pof{\W}}$$ and $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ would be $$\log N$$: the redundancy.
 
 ### Predictive Prior
 
@@ -1116,24 +1152,28 @@ How does the predictive prior term fit into this? The DPI again yields the answe
 As the predictions are independent of the parameters, we can map from equivalence classes $$[\w]$$ to predictions, and the DPI yields:
 
 $$
-\begin{align}
+\begin{aligned}
 \Kale{\qof{\W}}{\pof{\W}} &\ge \Kale{\qof{[\W]}}{\pof{[\W]}} \\
 &\ge \Kale{\qof{\Y...\given\x...}}{\pof{\Y...\given\x...}}.
-\end{align}
+\end{aligned}
 $$
 
 </aside>
 
-This tells us that the predictive prior term can at best measure the 🥬 divergence between the equivalence classes of the parameters---and not between the parameters itself. Luckily, this is the more meaningful divergence anyway.
+This tells us that the predictive prior term can at best measure the KL divergence between the equivalence classes of the parameters---and not between the parameters itself---but luckily, this is the more meaningful divergence anyway!
 
-For the equality cases, we note that:
+For the equality cases, we observe that:
 
 1. we need a 1:1 mapping between parameters and equivalence classes for the first bound to be tight, and
-2. we need $$\Kale{\qof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...,\Y_1\given\x_n,...,\x_1}} \to 0$$ for $$n \to \infty$$ for the second bound to be tight.
+2. we need $$\Kale{\qof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}}{\pof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}} \to 0$$ for $$n \to \infty$$ for the second bound to be tight.
 
-For **2.**, we know from the chain rule that $$\Kale{\qof{\Y_n,...\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...\Y_1\given\x_n,...,\x_1}}$$ is monotonically increasing in $$n$$, and as it is bounded by $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ from above, it must converge.
+For **2.**, we know from the chain rule that
 
-To give intuition and without attempting to prove this formally, we can appeal to [*Bernstein von Mises* theorem](https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem), which states that the posterior distribution of the parameters converges to a Gaussian distribution with mean and variance given by the maximum likelihood estimate (MLE) as the number of samples goes to infinity *as long as the model parameters are identifiable, that is the true parameters we want to learn are unique*:
+$$\Kale{\qof{\Y_n,...\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...\Y_1\given\x_n,...,\x_1}}$$ 
+
+is monotonically increasing in $$n$$, and as it is bounded by $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ from above, it *must* converge. When does it close the gap?
+
+To give intuition that it might, and without attempting to prove this formally, we can appeal to [*Bernstein von Mises* theorem](https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem), which states that the posterior distribution of the parameters converges to a Gaussian distribution with mean and variance given by the maximum likelihood estimate (MLE) as the number of samples goes to infinity *as long as the model parameters are identifiable, that is the true parameters we want to learn are unique*:
 
 In the space of equivalence classes given our definitions, the \[MLE\] will be unique by definition and thus the model identifiable, and as the MLE is prior-independent, both $$\opq$$ and $$\opp$$ will converge to the MLE. In other words, both $$\opq$$ and $$\opp$$ will converge to the same equivalence class, and $$\Kale{\qof{[\W]\given \Y..., \x...}}{\pof{[\W] \given \Y..., \x...}} \to 0$$ for $$n \to \infty$$.
 Thus, we have:
